# apollo

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: clang.yml  gcc.yml  linux.yml  msvc.yml
cmake/: FindLua.cmake
src/: CMakeLists.txt  apollo.hpp.in
src/core/: CMakeLists.txt  matrix.hpp  ray.hpp  real.hpp  utils.hpp  vector.hpp
src/shapes/: CMakeLists.txt
test/: CMakeLists.txt
test/core/: CMakeLists.txt  matrix_test.cpp  ray_test.cpp  utils_test.cpp  vector_specialisation_test.cpp  vector_test.cpp
test/shapes/: CMakeLists.txt
