set(APOLLO_TEST_TOP_LIST
    ${APOLLO_TEST_ROOT}/test_main.cpp
    )

add_subdirectory(${APOLLO_TEST_ROOT}/core)

set(APOLLO_TEST_TOP_GROUP ${APOLLO_TEST_TOP_LIST} PARENT_SCOPE)
set(APOLLO_TEST_CORE_GROUP ${APOLLO_CORE_TESTS} PARENT_SCOPE)

set(APOLLO_TEST_LIST
    ${APOLLO_TEST_TOP_LIST}
    ${APOLLO_CORE_TESTS}
    PARENT_SCOPE)

